feat(index):Add br between links

--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <title>Document</title>
 </head>
 <body>
+    
     <h1>Home page</h1>
-    <a href="#">Bright</a>
+    <a href="#">Bright</a><br>
     <a href="#">Anas</a>
+    
 </body>
 </html>
