Revert "feat(index):Link profile"
This reverts commit 72e31b963618a626d99997c0befad845362540be.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     
     <h1>Home page</h1>
-    <a href="/bright-profile.html">Bright</a><br>
+    <a href="#">Bright</a><br>
     <a href="#">Anas</a>
     
     <h2>The name Attribute</h2>
