--- a/bright-profile.html
+++ b/bright-profile.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/bright-profile.css">
 </head>
 <body>
-    <h1>Bright Profile</h1>
+    <h1>Bright Profileeeeee</h1>
     <ul>
         <li>Name : Vachirawit</li>
         <li>Age : 25 years old</li>
